Fixes #23079